[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/tree_base.png" type="Texture" id=1]
[ext_resource path="res://Images/tree.png" type="Texture" id=2]
[ext_resource path="res://Environment/Tree.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Stage1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stage_1_complete"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Stage2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -60 ), Vector2( 0, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80, 40 )

[node name="Tree" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -60 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Stage1 = SubResource( 1 )
anims/Stage2 = SubResource( 2 )

[node name="Roots" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roots"]
position = Vector2( 0, 75 )
shape = SubResource( 3 )

[node name="Boost" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boost"]
position = Vector2( 0, 45 )
shape = SubResource( 4 )

[connection signal="area_entered" from="Roots" to="." method="_on_Roots_area_entered"]
[connection signal="body_entered" from="Boost" to="." method="_on_Boost_body_entered"]
[connection signal="body_exited" from="Boost" to="." method="_on_Boost_body_exited"]
